fix: kiro picture

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <article class="paper-item">
                     <h3 class="paper-title">NVSim: Novel View Synthesis Simulator for Large Scale Indoor Navigation</h3>
                     <p class="paper-authors">M. Jeong, E. Kim, <b>S. Park</b>, J. Choi, and A. J. Choi</p>
-                    <p class="paper-venue">IEEE International Conference on Robotics and Automation (ICRA), 2026. (Submitted)</p>
+                    <p class="paper-venue">IEEE International Conference on Robotics and Automation (ICRA), 2026 (Submitted)</p>
                     <div class="paper-links">
                         <a href="#" class="paper-btn"><i class="far fa-file-pdf"></i> PDF</a>
                     </div>
@@ -436,7 +436,7 @@
                 <article class="paper-item">
                     <h3 class="paper-title">Gaussian Splatting 기반 실제 환경 대상 실내 로봇 내비게이션 시뮬레이터 구현</h3>
                     <p class="paper-authors">정민규, 김은성, <b>박세훈</b>, 최재용</p>
-                    <p class="paper-venue">항공우주시스템공학회 추계학술대회, 09월 17-20일, 휘닉스아일랜드, 제주, 2025.</p>
+                    <p class="paper-venue">항공우주시스템공학회 추계학술대회, 휘닉스아일랜드, 제주, 2025년 9월 17-20일.</p>
                     <div class="paper-links">
                         <a href="#" class="paper-btn"><i class="far fa-file-pdf"></i> PDF</a>
                     </div>
@@ -445,7 +445,7 @@
                 <article class="paper-item">
                     <h3 class="paper-title">Keyframe 기반 시계열 Transformer 아키텍처를 활용한 경량 행동 인식 모델 연구</h3>
                     <p class="paper-authors"><b>박세훈</b>, 최재용</p>
-                    <p class="paper-venue">대한전자공학회 하계종합학술대회, 롯데호텔 중문, 제주, 6월 24-27일, 2025.</p>
+                    <p class="paper-venue">대한전자공학회 하계종합학술대회, 롯데호텔 중문, 제주, 2025년 6월 24-27일.</p>
                     <div class="paper-links">
                         <a href="#" class="paper-btn"><i class="far fa-file-pdf"></i> PDF</a>
                     </div>
